exports[`<PhoneVerificationInput /> should disable input when verifying 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "center",
      "marginTop": 60,
    }
  }>
  <View
    style={
      Object {
        "alignSelf": "center",
        "marginBottom": 15,
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": "HelveticaNeue-Thin",
          },
          Object {
            "fontSize": 20,
            "textAlign": "center",
          },
        ]
      }>
      Please enter the code 
       sent to your phone number
    </Text>
  </View>
  <TextInput
    autoFocus={true}
    disabled={true}
    keyboardType="numeric"
    maxLength={4}
    onChangeText={[Function]}
    style={
      Object {
        "alignSelf": "center",
        "borderColor": "gray",
        "borderWidth": 1,
        "fontSize": 85,
        "height": 100,
        "padding": 5,
        "textAlign": "center",
        "width": 230,
      }
    } />
  <View
    style={
      Object {
        "height": 100,
        "marginTop": 15,
        "width": null,
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": "HelveticaNeue-Thin",
          },
          Object {
            "color": "red",
            "fontSize": 12,
            "textAlign": "center",
          },
        ]
      }>
      
    </Text>
  </View>
</View>
`;

exports[`<PhoneVerificationInput /> should show no message when invalid code entered 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "center",
      "marginTop": 60,
    }
  }>
  <View
    style={
      Object {
        "alignSelf": "center",
        "marginBottom": 15,
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": "HelveticaNeue-Thin",
          },
          Object {
            "fontSize": 20,
            "textAlign": "center",
          },
        ]
      }>
      Please enter the code 
       sent to your phone number
    </Text>
  </View>
  <TextInput
    autoFocus={true}
    disabled={false}
    keyboardType="numeric"
    maxLength={4}
    onChangeText={[Function]}
    style={
      Object {
        "alignSelf": "center",
        "borderColor": "gray",
        "borderWidth": 1,
        "fontSize": 85,
        "height": 100,
        "padding": 5,
        "textAlign": "center",
        "width": 230,
      }
    } />
  <View
    style={
      Object {
        "height": 100,
        "marginTop": 15,
        "width": null,
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": "HelveticaNeue-Thin",
          },
          Object {
            "color": "red",
            "fontSize": 12,
            "textAlign": "center",
          },
        ]
      }>
      
    </Text>
  </View>
</View>
`;
